<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="460dip"
    android:layout_height="fill_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    >

	<RadioGroup
		android:id="@+id/addTypeGroup"
		android:gravity="center_vertical" 
		android:layout_gravity="bottom" 
		android:orientation="horizontal"
		android:background="@drawable/adddialogtab_toolbar_bg" 
		android:layout_width="290dip" 
		android:layout_height="wrap_content">
		<RadioButton
			android:id="@+id/paymentRadioButton"
			android:layout_marginTop="2.0dip"
			android:layout_width="40dip" 
			android:text="@string/payment_text"
			android:drawableTop="@drawable/ic_payment" 
			style="@style/main_tab_bottom"/>
		<RadioButton
			android:id="@+id/depositRadioButton"
			android:layout_marginTop="2.0dip"
			android:layout_width="40dip"
			android:text="@string/deposit_text"
			android:drawableTop="@drawable/ic_deposit" 
			style="@style/main_tab_bottom"/>
	</RadioGroup>

	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <LinearLayout
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/number_text"/>
			<EditText
				android:layout_width="120dip"
				android:layout_height="wrap_content"
		        android:hint="@string/number_text"
		        android:numeric="integer"/>
	    </LinearLayout>
	    
	    <LinearLayout
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/date_text"/>
			<com.android.Platinum.CalendarButton
				android:id="@+id/dateSpinner"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" 
				android:layout_width="170dip"
				android:textSize="18dip"/>
	    </LinearLayout>
	</LinearLayout>

    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:text="@string/category_properties_text"/>
		<Spinner
			android:id="@+id/categorySpinner"
			android:layout_width="290dip"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:fadingEdge="none"/>
    </LinearLayout>
	
	
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/comment_text"/>
		<EditText
			android:layout_width="290dip"
			android:layout_height="wrap_content"
	        android:hint="@string/comment_text"/>
    </LinearLayout>
	
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<Spinner
			android:id="@+id/accountSpinner"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true" 
			android:layout_width="200dip"
			android:textSize="20dip"/>
		<Button
			android:id="@+id/accountButton"
			android:layout_width="85dip"
			android:layout_height="40dip"
			android:background="@drawable/account_button_bak"
			android:text="@string/account_button"
	        android:layout_gravity="center"/>
	</LinearLayout>
	
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<Button
			android:id="@+id/add2Button"
			android:layout_height="fill_parent"
	        android:text="@string/add_button" 
	        android:layout_width="80dip"/>
		<Button
			android:id="@+id/addCloseButton"
			android:layout_height="fill_parent"
	        android:text="@string/add_close_button" 
	        android:layout_width="130dip"/>
		<Button
			android:id="@+id/closeButton"
			android:layout_height="fill_parent"
	        android:text="@string/close_button"
			android:layout_width="80dip"/>
	</LinearLayout>

</LinearLayout>