<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="460dip"
    android:layout_height="fill_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    >

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="italic"
				android:textSize="12dip"
				android:textColor="#ffffffff"
				android:text="@string/start_date" 
				android:layout_gravity="center_vertical"/>
			<DatePicker
				android:id="@+id/startDatePicker"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="18dip"
				android:layout_marginLeft="15dip"></DatePicker>
	</LinearLayout>

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="italic"
				android:textSize="12dip"
				android:textColor="#ffffffff"
				android:text="@string/closing_date" 
				android:layout_gravity="center_vertical"/>
			<DatePicker
				android:id="@+id/closingDatePicker"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="18dip" 
				android:layout_marginLeft="15dip"></DatePicker>
	</LinearLayout>

	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<Button
			android:id="@+id/thisMonthButton"
			android:layout_width="110dip"
			android:layout_height="wrap_content"
	        android:text="@string/this_month" 
	        android:textStyle="bold"
	        android:textColor="#ff666fff"
	        android:textSize="14dip"/>
		<Button
			android:id="@+id/thisWeekButton"
			android:layout_width="110dip"
			android:layout_height="wrap_content"
	        android:text="@string/this_week" 
	        android:textStyle="bold"
	        android:textColor="#ff666fff"
	        android:textSize="14dip"/>
		<Button
			android:id="@+id/okayButton"
			android:layout_width="70dip"
			android:layout_height="wrap_content"
	        android:text="@string/okay"
	        android:textStyle="bold"
	        android:textColor="#fff00e0f"
	        android:textSize="14dip"/>
	</LinearLayout>

</LinearLayout>