<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="460dip"
    android:layout_height="fill_parent"
    >

    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:text="AccountCategory"/>
		<Spinner
			android:id="@+id/AccountCategorySpinner"
			android:layout_width="290dip"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:fadingEdge="none"/>
    </LinearLayout>
	
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Money"/>

            
        <EditText
            android:layout_width="290dip"
            android:layout_height="wrap_content"
            android:hint="Please input your money amount.."/>
    </LinearLayout>
	
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<Button
			android:id="@+id/AcountAdd2Button"
			android:layout_height="fill_parent"
	        android:text="@string/add_button" 
	        android:layout_width="80dip"/>
		<Button
			android:id="@+id/AcountAddCloseButton"
			android:layout_height="fill_parent"
	        android:text="@string/add_close_button" 
	        android:layout_width="130dip"/>
		<Button
			android:id="@+id/AcountCloseButton"
			android:layout_height="fill_parent"
	        android:text="@string/close_button"
			android:layout_width="80dip"/>
	</LinearLayout>

</LinearLayout>